OKP-98 - Addresses potential synchronization race conditions
git-svn-id: http://pmo.applab.org:81/svn/ckw/products/search.client@222 8df75f15-59d7-5c4e-8359-c3bff8332439