@@ -1,32 +1,33 @@
 package yo.applab.ckwinfo;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.Timer;
 import java.util.TimerTask;
 
 import android.content.Context;
 import android.content.SharedPreferences;
 import android.os.Handler;
+import android.os.Message;
 import android.preference.PreferenceManager;
 import android.util.Log;
+import android.widget.Toast;
 
 /**
  * synchronizes local data including: updating keywords, submitting usage logs,
  * submitting incomplete searches, and retrieving search results
- * 
  */
 public class SynchronizeTask {
 	/** for debugging purposes in adb logcat */
 	private final String LOG_TAG = "SynchronizeTask";
 
-	/** Handler to notify of new changes */
+	/** Handler to notify UI of new changes */
 	private Handler handler;
 
 	/** The application context */
 	private Context applicationContext;
-	
-	/**schedules recurring tasks using a timer*/
+
+	/** schedules recurring tasks using a timer */
 	private Timer timer;
 
 	public SynchronizeTask(Handler uiHandler, Context applicationContext) {
@@ -34,10 +35,27 @@ public class SynchronizeTask {
 		this.applicationContext = applicationContext;
 	}
 
+	/** thread for launch time synchronization */
+	public void startLaunchThread() {
+		// background thread for launch time synchronization
+		Thread launchTimeSynchronizationThread = new Thread() {
+			public void run() {
+				Log.i(LOG_TAG, "Launch time synchronization started...");
+				submitPendingUsageLogs();
+				submitIncompleteSearches();
+				backgroundUpdateKeywords();
+				// Schedule recurring tasks
+				scheduleRecurringTimer();
+			}
+		};
+		launchTimeSynchronizationThread.start();
+	}
+
 	/**
 	 * A timer for sheduled tasks
 	 */
-	public void scheduleRecurringTimer () {		
+	public void scheduleRecurringTimer() {
+		Log.i(LOG_TAG, "Start timer.");
 		this.timer = new Timer();
 		this.timer.scheduleAtFixedRate(new SynchronizeScheduler(this),
 				Global.SYNCHRONIZATION_INTERVAL,
@@ -45,7 +63,7 @@ public class SynchronizeTask {
 	}
 
 	/**
-	 * Updates local keywords cache
+	 * updates local keywords cache
 	 */
 	public void updateKeywords() {
 		getServerUrl(R.string.update_path);
@@ -56,6 +74,59 @@ public class SynchronizeTask {
 	}
 
 	/**
+	 * updates keywords in background
+	 */
+	private void backgroundUpdateKeywords() {
+		if (KeywordSynchronizer.tryStartSynchronization()) {
+			String base = getServerUrl(R.string.update_path);
+			try {
+				Log.i(LOG_TAG, "Updating keywords...");
+				URL url = new URL(base);
+				String newKeywords = DownloadManager.retrieveData(url);
+				if (newKeywords != null) {
+					if (newKeywords.trim().endsWith("</Keywords>")) {
+						KeywordParser keywordParser = new KeywordParser(
+								applicationContext, backgroundUpdateHandler,
+								newKeywords);
+						Thread parser = new Thread(keywordParser);
+						parser.start();
+					} else {
+						Log.e(LOG_TAG, "ERROR: Invalid keyword file!");
+						KeywordSynchronizer.completeSynchronization();
+						this.handler
+								.sendEmptyMessage(Global.DISMISS_WAIT_DIALOG);
+					}
+				}
+			} catch (MalformedURLException e) {
+				Log.e(LOG_TAG, "MalformedURLException: " + e);
+			}
+		} else {
+			Log.i(LOG_TAG, "Cannot synchronize at this time.");
+		}
+	}
+
+	/**
+	 * handler for the background update process
+	 */
+	final Handler backgroundUpdateHandler = new Handler() {
+		// A handler for parsing responses
+		public void handleMessage(Message msg) {
+			switch (msg.what) {
+			case Global.KEYWORD_PARSE_SUCCESS:
+				Toast.makeText(applicationContext,
+						applicationContext.getString(R.string.refreshed),
+						Toast.LENGTH_LONG).show();
+				break;
+			case Global.KEYWORD_PARSE_ERROR:
+
+				break;
+			}
+			KeywordSynchronizer.completeSynchronization();
+			handler.sendEmptyMessage(Global.DISMISS_WAIT_DIALOG);
+		}
+	};
+
+	/**
 	 * retrieves server URL
 	 * 
 	 * @param id
@@ -63,9 +134,6 @@ public class SynchronizeTask {
 	 * @return the resource url
 	 */
 	private String getServerUrl(int id) {
-		if (Global.URL != null) { 
-			return Global.URL; 
-			} 
 		SharedPreferences settings = PreferenceManager
 				.getDefaultSharedPreferences(applicationContext);
 		String url = settings.getString(Settings.KEY_SERVER, applicationContext
@@ -82,14 +150,12 @@ public class SynchronizeTask {
 	 *            the search url encoded request string
 	 */
 	public void getSearchResults(final String message) {
-		
 		Thread connectThread = new Thread() {
 			public void run() {
 				String base = getServerUrl(R.string.search_path);
 				try {
-					URI uri = new URI(base + message);
-					DownloadManager dataDownloadManager = new DownloadManager();
-					String results = dataDownloadManager.retrieveData(uri);
+					URL url = new URL(base + message);
+					String results = DownloadManager.retrieveData(url);
 					if (results != null) {
 						if (handler != null) {
 							Global.data = results;
@@ -100,8 +166,8 @@ public class SynchronizeTask {
 							handler.sendEmptyMessage(Global.CONNECTION_ERROR);
 						}
 					}
-				} catch (URISyntaxException e) {
-					Log.d(LOG_TAG, "URISyntaxException: " + e.toString());
+				} catch (MalformedURLException e) {
+					Log.d(LOG_TAG, "MalformedURLException: " + e.toString());
 				}
 			}
 		};
@@ -111,7 +177,7 @@ public class SynchronizeTask {
 	/**
 	 * attempts to submit and update incomplete searches
 	 */
-	private void submitIncompleteSearches () {
+	private void submitIncompleteSearches() {
 		String base = getServerUrl(R.string.search_path);
 		SubmitIncompleteSearches submitIncompleteSearches = new SubmitIncompleteSearches(
 				this.applicationContext, base);
@@ -125,8 +191,7 @@ public class SynchronizeTask {
 		String base = getServerUrl(R.string.search_path);
 		SubmitLocalSearchUsage submitLocalSearchUsage = new SubmitLocalSearchUsage(
 				this.applicationContext, base);
-		Thread backgroundSubmissionThread = new Thread(submitLocalSearchUsage);
-		backgroundSubmissionThread.start();
+		submitLocalSearchUsage.sendLogs();
 	}
 
 	/**
@@ -137,17 +202,18 @@ public class SynchronizeTask {
 		SynchronizeTask synchronize;
 
 		public SynchronizeScheduler(SynchronizeTask synchronizeTask) {
-			this.synchronize = synchronizeTask;				
+			this.synchronize = synchronizeTask;
 		}
-	
+
 		@Override
 		public void run() {
+			Log.i(LOG_TAG, "Timer run()");
 			Log.i(LOG_TAG, "Submitting usage logs...");
 			submitPendingUsageLogs();
 			Log.i(LOG_TAG, "Updating incomplete searches...");
-			submitIncompleteSearches ();
+			submitIncompleteSearches();
+			Log.i(LOG_TAG, "Updating keywords...");
+			backgroundUpdateKeywords();
 		}
-		
-
 	}
 }
